# voyager

./: .bazelrc  .editorconfig  .gitignore  .gometalinter.json  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE  shell.nix  types.go
cmd/: BUILD.bazel  cmd.bzl  common.go
cmd/aggregator/: BUILD.bazel  main.go
cmd/aggregator/app/: BUILD.bazel  apiserver_runner.go  controller_constructor.go  main.go  options.go
cmd/composition/: BUILD.bazel  main.go
cmd/composition/app/: BUILD.bazel  main.go
cmd/computionadmission/: BUILD.bazel  main.go
cmd/computionadmission/app/: BUILD.bazel  app.go  main.go  options.go
cmd/crd/: BUILD.bazel  main.go
cmd/creator/: BUILD.bazel  main.go
cmd/creator/app/: BUILD.bazel  main.go
cmd/formation/: BUILD.bazel  main.go
cmd/formation/app/: BUILD.bazel  controller_constructor.go  main.go  options.go
cmd/monitor/: BUILD.bazel  main.go
cmd/monitor/app/: BUILD.bazel  app.go  main.go  options.go
cmd/ops/: BUILD.bazel  main.go
cmd/ops/app/: BUILD.bazel  apiserver_runner.go  controller_constructor.go  main.go  options.go
cmd/orchestration/: BUILD.bazel  main.go
cmd/orchestration/app/: BUILD.bazel  controller_constructor.go  main.go  options.go
cmd/orchestrationadmission/: BUILD.bazel  main.go  options.go
cmd/orchestrationadmission/app/: BUILD.bazel  main.go  options.go
cmd/replication/: BUILD.bazel  main.go
cmd/replication/app/: BUILD.bazel  main.go
cmd/replicationadmission/: BUILD.bazel  main.go
cmd/replicationadmission/app/: BUILD.bazel  main.go  options.go
cmd/reporter/: BUILD.bazel  main.go
cmd/reporter/app/: BUILD.bazel  apiserver_runner.go  controller_constructor.go  main.go  options.go
cmd/reporterreporter/: BUILD.bazel  main.go
cmd/reporterreporter/app/: BUILD.bazel  app.go  main.go  options.go
cmd/secretive/: BUILD.bazel  main.go
cmd/secretive/app/: BUILD.bazel  app.go  config.go  main.go
cmd/showenv/: BUILD.bazel  main.go
cmd/smith/: BUILD.bazel  main.go
cmd/smith/app/: BUILD.bazel  main.go
cmd/smith/config/: BUILD.bazel  config.go
cmd/snoopy/: BUILD.bazel  main.go
cmd/snoopy/app/: BUILD.bazel  controller_constructor.go  main.go
cmd/svccatadmission/: BUILD.bazel  main.go
cmd/svccatadmission/app/: BUILD.bazel  main.go  options.go
cmd/synchronization/: BUILD.bazel  main.go
cmd/synchronization/app/: BUILD.bazel  controller_constructor.go  main.go  options.go
cmd/trebuchet/: BUILD.bazel  main.go
cmd/trebuchet/app/: BUILD.bazel  main.go
cmd/validator/: BUILD.bazel  validate.go
cmd/validator/testdata/: location.yaml  sd.yaml
pkg/admission/: BUILD.bazel  annotations.go  review.go  server.go
pkg/aggregator/: BUILD.bazel  api_handler.go  api_handler_test.go  controller.go
pkg/aggregator/schema/: BUILD.bazel  aggregator.json
pkg/aggregator/server/: BUILD.bazel  server.go
pkg/composition/: BUILD.bazel  README  client.go  client_test.go  controller.go  controller2.go  controller_constructor.go  controller_test.go  finalizers.go  options.go  plumbing_for_test.go  sd_var_model.go  sd_var_model_test.go  service_descriptor_transformer.go  service_descriptor_transformer_test.go
pkg/composition/client/: BUILD.bazel  clientset.go
pkg/composition/crd/: BUILD.bazel  crd.go  crd_test.go
pkg/composition/informer/: BUILD.bazel  builder.go  informer_service_descriptor.go
pkg/composition/testdata/: basic.ld.location1.yaml  basic.ld.location2.yaml  basic.sd.output.yaml  interop_error.ld.location1.yaml  interop_error.ld.location2.yaml  interop_error.sd.output.yaml  missing_ld_status.ld.location1.yaml  missing_ld_status.ld.location2.yaml  missing_ld_status.sd.input.yaml  missing_ld_status.sd.output.yaml  test_crd_requires_resource_group_locations.yml  test_dependson_itself.yml  test_dependson_not_there.yml  test_dupe_resource_name_across_resource_group.yml  test_dupe_resource_name_same_resource_group.yml  test_empty_resources.yml  test_inline_variable_substitution.yml  test_inline_variable_substitution_w_reserved_key.yml  test_key_nil_or_missing.yml  test_label_not_in_location.yml  test_label_not_specified.yml  test_location_doesnt_match_cluster.yml  test_multiple_locations_same_name.yml  test_multiple_locations_same_resource.yml  test_no_location_in_resource_group.yml  test_one_location_multiple_resource_groups.yml  test_read_location.yml  test_spec_not_specified.yml  test_var_lookup.yml  test_var_merge.yml  test_variable_concatenation.yml  test_variable_does_not_exist_in_list.yml  test_variable_does_not_exist_in_map.yml  test_variable_does_not_exist_in_scope.yml  test_variable_substitution.yml  test_variable_substitution_is_backwards_compatible.yml  test_variable_substitution_with_a_reserved_prefix.yml  test_variable_substitution_with_invalid_key.yml  test_variable_substitution_with_invalid_prefix.yml  transition.ld.location1.yaml  (+5 more)
pkg/composition/updater/: BUILD.bazel  objectupdater_typed.go
pkg/creator/: BUILD.bazel  errors.go  handler.go  handler_interfaces.go  handler_test.go  types.go
pkg/creator/client/: BUILD.bazel  clientset.go
pkg/creator/luigi/: BUILD.bazel  client.go  client_test.go  clientimpl.go  creator.go  creator_test.go
pkg/creator/server/: BUILD.bazel  server.go
pkg/formation/: BUILD.bazel  README  client.go  controller.go  controller_test.go
pkg/k8s/: BUILD.bazel  condition.go  condition_test.go  k8s.go
pkg/microsserver/: BUILD.bazel  client.go  types.go
pkg/monitor/: BUILD.bazel  monitor.go  objects.go  zappers.go
pkg/ops/: BUILD.bazel  api_handler.go  api_handler_test.go  client.go  controller.go  indexers.go  openapi.go  provider.go  provider_test.go  types.go
pkg/opsgenie/: BUILD.bazel  client.go  client_test.go  types.go
pkg/options/: BUILD.bazel  server.go  shared.go
pkg/orchestration/: BUILD.bazel  README  admission.go  client.go  client_test.go  controller.go  controller_test.go  types.go
pkg/pagerduty/: BUILD.bazel  pagerduty.go  pagerduty_test.go  types.go
pkg/replication/: BUILD.bazel  admission.go  admission_authz_test.go  admission_test.go  controller.go  controller_constructor.go  controller_test.go
(+867 files in other folders)
