load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "github.com/atlassian/voyager/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/crash:go_default_library",
        "//vendor/github.com/atlassian/ctrl/app:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
