load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "github.com/atlassian/voyager/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/crash:go_default_library",
        "//vendor/github.com/atlassian/ctrl/app:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

passwd_entry(
    name = "nobody_user",
    info = "nobody",
    tags = ["manual"],
    uid = 1002,
    username = "nobody",
)

passwd_file(
    name = "passwd",
    entries = [
        ":nobody_user",
    ],
    tags = ["manual"],
)

# Create a tar file containing the created passwd file
pkg_tar(
    name = "passwd_tar",
    srcs = [":passwd"],
    mode = "0o644",
    package_dir = "etc",
    tags = ["manual"],
)

container_image(
    name = "nobody_image",
    base = "@go_image_base//image",
    tags = ["manual"],
    tars = [":passwd_tar"],
    user = "nobody",
    visibility = ["//visibility:public"],
)

# Use CC base image here to have glibc installed because it is
# needed for race detector to work https://github.com/golang/go/issues/14481
# Otherwise getting:
# error while loading shared libraries: libstdc++.so.6: cannot open shared object file: No such file or directory
container_image(
    name = "nobody_image_debug",
    base = "@cc_debug_image_base//image",
    tags = ["manual"],
    tars = [":passwd_tar"],
    user = "nobody",
    visibility = ["//visibility:public"],
)
