load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//cmd:cmd.bzl", "define_command_targets")

define_command_targets(
    name = "aggregator",
    binary_embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/voyager/cmd/aggregator",
    visibility = ["//visibility:private"],
    deps = ["//cmd/aggregator/app:go_default_library"],
)
