load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/voyager/cmd/crd",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd:go_default_library",
        "//pkg/composition/crd:go_default_library",
        "//pkg/formation/crd:go_default_library",
        "//pkg/ops:go_default_library",
        "//pkg/orchestration:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/resources:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
    ],
)

go_binary(
    name = "crd",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
