load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/voyager/cmd/showenv",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//vendor/github.com/atlassian/ctrl/options:go_default_library",
        "//vendor/github.com/atlassian/ctrl/process:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)

go_binary(
    name = "showenv",
    embed = [":go_default_library"],
    race = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "container",
    binary = ":showenv",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
