load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["validate.go"],
    importpath = "github.com/atlassian/voyager/cmd/validator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/composition/v1:go_default_library",
        "//pkg/composition:go_default_library",
        "//pkg/options:go_default_library",
        "//pkg/util/crash:go_default_library",
        "//vendor/github.com/atlassian/ctrl/app:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)

go_binary(
    name = "validator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
