load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api_handler.go",
        "controller.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/aggregator",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/apis/aggregator:go_default_library",
        "//pkg/apis/aggregator/v1:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/apiservice:go_default_library",
        "//pkg/util/clusterregistry:go_default_library",
        "//pkg/util/crash:go_default_library",
        "//pkg/util/httputil:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//pkg/util/pkiutil:go_default_library",
        "//vendor/github.com/SermoDigital/jose/jws:go_default_library",
        "//vendor/github.com/felixge/httpsnoop:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/endpoints/request:go_default_library",
        "//vendor/k8s.io/client-go/transport:go_default_library",
        "//vendor/k8s.io/cluster-registry/pkg/apis/clusterregistry/v1alpha1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["api_handler_test.go"],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//:go_default_library",
        "//pkg/apis/aggregator/v1:go_default_library",
        "//pkg/util/httputil/httptest:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//vendor/github.com/SermoDigital/jose/jws:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_model/go:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/authentication/user:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/endpoints/request:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/cluster-registry/pkg/apis/clusterregistry/v1alpha1:go_default_library",
        "//vendor/k8s.io/cluster-registry/pkg/client/clientset/versioned/fake:go_default_library",
        "//vendor/k8s.io/cluster-registry/pkg/client/informers/externalversions:go_default_library",
    ],
)
