load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "handler.go",
        "handler_interfaces.go",
        "types.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/creator",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/api/schema:go_default_library",
        "//pkg/apis/creator/v1:go_default_library",
        "//pkg/creator/luigi:go_default_library",
        "//pkg/creator/ssam:go_default_library",
        "//pkg/orchestration/wiring/ec2compute/common:go_default_library",
        "//pkg/pagerduty:go_default_library",
        "//pkg/servicecentral:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/apiservice:go_default_library",
        "//pkg/util/auth:go_default_library",
        "//pkg/util/httputil:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//pkg/util/pkiutil:go_default_library",
        "//pkg/util/uuid:go_default_library",
        "//vendor/github.com/PagerDuty/go-pagerduty:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/endpoints/request:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/registry/rest:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["handler_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//:go_default_library",
        "//pkg/apis/creator/v1:go_default_library",
        "//pkg/creator/luigi:go_default_library",
        "//pkg/creator/ssam:go_default_library",
        "//pkg/pagerduty:go_default_library",
        "//pkg/servicecentral:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/util/auth:go_default_library",
        "//pkg/util/httputil:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/mock:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/authentication/user:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/endpoints/request:go_default_library",
    ],
)
