load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "controller.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/formation",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/api/schema:go_default_library",
        "//pkg/apis/formation:go_default_library",
        "//pkg/apis/formation/v1:go_default_library",
        "//pkg/apis/orchestration/v1:go_default_library",
        "//pkg/formation/client/typed/formation/v1:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/k8s/updater:go_default_library",
        "//pkg/options:go_default_library",
        "//pkg/releases:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/templating:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/apis/condition/v1:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["controller_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//:go_default_library",
        "//pkg/apis/formation/v1:go_default_library",
        "//pkg/apis/orchestration/v1:go_default_library",
        "//pkg/formation/client/fake:go_default_library",
        "//pkg/formation/informer:go_default_library",
        "//pkg/formation/updater:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/orchestration/client/fake:go_default_library",
        "//pkg/orchestration/informer:go_default_library",
        "//pkg/testutil:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/apis/condition/v1:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/specchecker:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/store:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
        "//vendor/k8s.io/client-go/informers/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
