load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "types.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/microsserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//pkg/util/httputil:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//pkg/util/pkiutil:go_default_library",
        "//vendor/bitbucket.org/atlassianlabs/restclient:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
