load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api_handler.go",
        "client.go",
        "controller.go",
        "indexers.go",
        "openapi.go",
        "provider.go",
        "types.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/ops",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/ops:go_default_library",
        "//pkg/apis/ops/v1:go_default_library",
        "//pkg/ops/constants:go_default_library",
        "//pkg/ops/util/zappers:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/apiservice:go_default_library",
        "//pkg/util/httputil:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//pkg/util/pkiutil:go_default_library",
        "//pkg/util/prometheus:go_default_library",
        "//vendor/bitbucket.org/atlassianlabs/restclient:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/logz:go_default_library",
        "//vendor/github.com/felixge/httpsnoop:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/go-chi/render:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/apis/servicecatalog/v1beta1:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/endpoints/request:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "api_handler_test.go",
        "provider_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//pkg/apis/ops:go_default_library",
        "//pkg/apis/ops/v1:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/ops/constants:go_default_library",
        "//pkg/util/httptest:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//pkg/util/pkiutil:go_default_library",
        "//vendor/github.com/SermoDigital/jose/jws:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/go-chi/chi/middleware:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/apis/servicecatalog/v1beta1:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/client/clientset_generated/clientset:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/client/clientset_generated/clientset/fake:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/client/informers_generated/externalversions/servicecatalog/v1beta1:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_model/go:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
        "//vendor/go.uber.org/zap/zaptest/observer:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/authentication/user:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/endpoints/request:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
