load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "shared.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/options",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
